--- a/demos/camera/build.gradle
+++ b/demos/camera/build.gradle
@@ -51,6 +51,7 @@ android {
 
 dependencies {
     implementation project(':core')
+    implementation project(':ui')
     implementation project(':extension-rtmp')
     implementation project(':extension-srt')
 
