--- a/extensions/rtmp/build.gradle
+++ b/extensions/rtmp/build.gradle
@@ -13,6 +13,7 @@ ext {
 dependencies {
     implementation project(':core')
     implementation 'video.api:rtmpdroid:1.2.1'
+    implementation "io.github.thibaultbee.krtmp:rtmp:1.0.0"
 
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
     implementation "androidx.core:core-ktx:${androidxCoreVersion}"
