--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,7 +24,7 @@ kotlinxCoroutines = "1.10.2"
 material = "1.12.0"
 mockk = "1.14.2"
 robolectric = "4.14.1"
-rtmpdroid = "1.2.1"
+krtmp = "1.0.0"
 srtdroid = "1.9.1"
 junitKtx = "1.2.1"
 window = "1.3.0"
@@ -60,7 +60,8 @@ kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutine
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
-rtmpdroid = { module = "video.api:rtmpdroid", version.ref = "rtmpdroid" }
+flv = { module = "io.github.thibaultbee.krtmp:flv-android", version.ref = "krtmp" }
+rtmp = { module = "io.github.thibaultbee.krtmp:rtmp-android", version.ref = "krtmp" }
 srtdroid-ktx = { module = "io.github.thibaultbee.srtdroid:srtdroid-ktx", version.ref = "srtdroid" }
 androidx-window = { group = "androidx.window", name = "window", version.ref = "window" }
 
