Add rtmp playback button and activity

--- a/demos/camera/src/main/AndroidManifest.xml
+++ b/demos/camera/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.settings.SettingsActivity" />
+        <activity android:name="io.github.thibaultbee.streampack.app.ui.main.RtmpPlaybackActivity" />
     </application>
 
 </manifest>
