Got to somewhat stable state. Random tweaks trying to get service working

--- a/demos/camera/src/main/AndroidManifest.xml
+++ b/demos/camera/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <!-- MediaProjection permissions -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MEDIA_PROJECTION" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_CAMERA" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <uses-feature android:name="android.hardware.camera" />
@@ -46,7 +47,7 @@
         <service
             android:name=".services.CameraStreamerService"
             android:exported="false"
-            android:foregroundServiceType="mediaProjection" />
+            android:foregroundServiceType="camera|mediaProjection" />
     </application>
 
 </manifest>
